--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -10,7 +10,7 @@
     title_ru: 3–2–1... Поехали!
     text_ru: Маленький шаг для одного человека, но гигантский скачок для всего человечества.
     title_en: 3-2-1... Poyekhali!
-    text_en: That's one small step for man, one giant leap for mankind
+    text_en: That's one small step for man, one giant leap for mankind.
     image: /assets/achievements/anime/space_1.png
     border_color: "#172d91"
     topic_id: 227428
