--- a/priv/rules/slice_of_life.yml
+++ b/priv/rules/slice_of_life.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Обычный японский школьник
     text_ru: Довольно заурядно.
-    title_en: The average Japanese schoolboy (or schoolgirl).
+    title_en: The average Japanese student.
     text_en: Pretty ordinary.
     image: /assets/achievements/anime/slice_of_life_1.png
     border_color: "#1a5369"
