--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -42,8 +42,8 @@
   threshold: 190
   metadata:
     title_ru: Ньютайп
-    text_ru: ORE WA GUNDAM
+    text_ru: ORE WA GUNDAM!
     title_en: Newtype
-    text_en: ORE WA GUNDAM
+    text_en: ORE WA GUNDAM!
     image: /assets/achievements/anime/mecha_4.gif
     border_color: "#20B2AA"
