--- a/priv/rules/mahou_shoujo.yml
+++ b/priv/rules/mahou_shoujo.yml
@@ -545,6 +545,6 @@
     title_ru: Настоящее волшебство?
     text_ru: Вашим силам теперь подвластно само мироздание.
     title_en: Real magic?
-    text_en: Your powers allow to change the universe
+    text_en: Your powers allow to change the universe.
     image: /assets/achievements/anime/mahou_shoujo_4.gif
     border_color: "#FE28A2"
