--- a/priv/rules/shortie.yml
+++ b/priv/rules/shortie.yml
@@ -8,7 +8,7 @@
   metadata:
     title_ru: Миг, и ты ее потерял
     text_ru: Все закончилось не успев начаться, остались лишь приятные воспоминания.
-    title_en: A moment, and you lost it.
+    title_en: A moment, and you lost it
     text_en: It was over before it started, leaving only pleasant memories.
     image: /assets/achievements/anime/shortie_1.jpg
     border_color: "#6E5160"
