--- a/priv/rules/gar.yml
+++ b/priv/rules/gar.yml
@@ -519,7 +519,7 @@
   metadata:
     title_ru: Так мужественно, что не вздохнуть
     text_ru: Ваши первые шаги в жанре, а борода уже не сбривается.
-    title_en: So courageous that you can't breathe.
+    title_en: So courageous that you can't breathe
     text_en: Your first steps in the genre, and your beard is no longer shaved off.
     topic_id: 227419
     image: /assets/achievements/anime/gar_1.jpg
