--- a/priv/rules/tsundere.yml
+++ b/priv/rules/tsundere.yml
@@ -1157,7 +1157,7 @@
   metadata:
     title_ru: Это не то, о чем ты подумал
     text_ru: Н-не то, чтобы я волновалась о тебе, я-ясно?
-    title_en: It's not what you think.
+    title_en: It's not what you think
     text_en: N-not that I'm worried about you, o-okay?
     image: /assets/achievements/anime/tsundere_1.jpg
     border_color: "#FCD975"
