--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -106,7 +106,7 @@
   metadata:
     title_ru: Это даже не финальная форма
     text_ru: Ваш единственный путь — вверх. Пора учиться доброй снисходительности.
-    title_en: It's not even the final form.
+    title_en: It's not even the final form
     text_en: Your only way is up. It's time to learn good condescension.
     image: /assets/achievements/anime/animelist_10.gif
     border_color: "#20B2AA"
@@ -145,9 +145,9 @@
       А четыре — самый шумный
     title_en: One, two, three, four
     text_en: |-
-      The first kitten is the whitest
-      The second kitten is the bravest
-      The third kitten is the smartest
+      Kitten One is the whitest
+      Kitten Two is the bravest
+      Kitten Three is the smartest
       And the fourth is the noisiest
     image: /assets/achievements/anime/animelist_13.jpg
     border_color: "#C7D0CC"
