--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -145,9 +145,9 @@
       А четыре — самый шумный
     title_en: One, two, three, four
     text_en: |-
-      Kitten One is the whitest
-      Kitten Two is the bravest
-      Kitten Three is the smartest
+      Kitten one is the whitest
+      Kitten two is the bravest
+      Kitten three is the smartest
       And the fourth is the noisiest
     image: /assets/achievements/anime/animelist_13.jpg
     border_color: "#C7D0CC"
