--- a/priv/rules/dementia_psychological.yml
+++ b/priv/rules/dementia_psychological.yml
@@ -21,7 +21,7 @@
   threshold: 40
   metadata:
     title_ru: Это вообще реально?
-    text_ru: Ориентация в пространстве нарушена. Стало трудно отличить реальность и вымысел.
+    text_ru: Ориентация в пространстве нарушена. Стало трудно отличить реальность от вымысла.
     title_en: Is it even real?
     text_en: Orientation in space was disturbed. It became difficult to distinguish between reality and fiction.
     image: /assets/achievements/anime/dementia_psychological_2.jpg
