--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -20,7 +20,7 @@
   threshold: 40
   metadata:
     title_ru: Земля отсюда совсем крошечная
-    text_ru: До чего же прекрасна Земля, если глядеть на неё сверху! Однако, не слишком ли тесно? Вашему миру пора расширяться — от маленькой Земли до целой вселенной.
+    text_ru: До чего же прекрасна Земля, если глядеть на неё сверху! Однако, не слишком ли тесно? Вашему миру пора расширяться — от маленькой Земли до целой Вселенной.
     title_en: The earth is tiny from here
     text_en: From this distant vantage point, the Earth might not seem of particular interest. But for us, it's different.
     image: /assets/achievements/anime/space_2.png
