--- a/priv/rules/josei.yml
+++ b/priv/rules/josei.yml
@@ -4,7 +4,7 @@
   algo: count
   threshold: 15
   filters:
-    genre_ids:
+    genre_v2_ids:
       - 43
   metadata:
     title_ru: Цветущая юность
