--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -4,7 +4,7 @@
   algo: count
   threshold: 35
   filters:
-    genre_ids:
+    genre_v2_ids:
       - 18
   metadata:
     title_ru: Пилот Evangelion Unit
