--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -4,7 +4,7 @@
   algo: count
   threshold: 25
   filters:
-    genre_ids:
+    genre_v2_ids:
       - 29
   metadata:
     title_ru: 3–2–1... Поехали!
