--- a/priv/rules/slice_of_life.yml
+++ b/priv/rules/slice_of_life.yml
@@ -4,7 +4,7 @@
   algo: count
   threshold: 40
   filters:
-    genre_ids:
+    genre_v2_ids:
       - 36
   metadata:
     title_ru: Обычный японский школьник
