--- a/priv/rules/scifi.yml
+++ b/priv/rules/scifi.yml
@@ -4,7 +4,7 @@
   algo: count
   threshold: 40
   filters:
-    genre_ids:
+    genre_v2_ids:
       - 24
   metadata:
     title_ru: Давным-давно, в далекой-далекой галактике...
