--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -31,7 +31,7 @@
   level: 3
   threshold: 60
   metadata:
-    title_ru: Все чудовища — это люди
+    title_ru: Страшнее человека зверя нет
     text_ru: Только люди могут смотреть на убийство себе подобных ради развлечения.
     title_en: All monsters are humans
     text_en: Only human beings can watch the killing of their own kind for the sake of entertainment.
